force-app/main/default/objects/ProgramAssignment__c/ProgramAssignment__c.object-meta.xml
<CustomObject>
    <label>Program Assignment</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Program Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>