force-app/main/default/objects/ProgramAssignment__c/fields/AssignedDate__c.field-meta.xml
<CustomField>
    <fullName>AssignedDate__c</fullName>
    <label>Assigned Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>