force-app/main/default/objects/ProgramAssignment__c/fields/CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CompletionDate__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>