force-app/main/default/objects/ProgramAssignment__c/fields/ExpectedCompletion__c.field-meta.xml
<CustomField>
    <fullName>ExpectedCompletion__c</fullName>
    <description>Expected completion date</description>
    <label>Expected Completion</label>
    <type>Date</type>
</CustomField>