force-app/main/default/objects/ProgramAssignment__c/fields/Program2__c.field-meta.xml
<CustomField>
    <fullName>Program2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Program Assignments</relationshipLabel>
    <relationshipName>Program_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>