force-app/main/default/objects/ProgramAssignment__c/fields/TeacherAssistantRequested__c.field-meta.xml
<CustomField>
    <fullName>TeacherAssistantRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The student has requested a Teaching Assistant</description>
    <label>TA Requested</label>
    <type>Checkbox</type>
</CustomField>