force-app/main/default/objects/ProgramAssignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Program__c</columns>
    <columns>Status__c</columns>
    <columns>AssignedDate__c</columns>
    <columns>CompletionDate__c</columns>
    <columns>ExpectedCompletion__c</columns>
    <columns>TeacherAssistantRequested__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>